--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -29,12 +29,12 @@ num-traits = { version = "0.2", default-features = false }
 libm = "0.2.1"
 
 [patch.crates-io]
-embassy-rp = { git = "https://github.com/embassy-rs/embassy" }embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
-"defmt",
-"unstable-pac",
-"time-driver",
-"critical-section-impl",
-"rp235xa",
+embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
+    "defmt",
+    "unstable-pac",
+    "time-driver",
+    "critical-section-impl",
+    "rp235xa",
 ] }
 embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = [
     "defmt",
@@ -59,8 +59,3 @@ defmt-rtt = "0.4"
 cortex-m-rt = "0.7.5"
 critical-section = "1.2.0"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
-embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy" }
-embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
-embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
-embassy-time = { git = "https://github.com/embassy-rs/embassy" }
-embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
